Explicitly print GPT-3 responses to render on GitHub

--- a/2022-03-gpt-trends/Notebook.ipynb
+++ b/2022-03-gpt-trends/Notebook.ipynb
@@ -43,12 +43,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "944fe328-5ba1-49b8-b36e-de8eb23124fc",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os # We only need this to get our API key from the environment variable.\n",
+    "import json\n",
     "import openai\n",
     "\n",
     "openai.api_key = os.getenv(\"OPENAI_API_KEY\")"
@@ -64,37 +65,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "9b36a492-175d-4688-9b72-9d5eae03587b",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<OpenAIObject text_completion id=cmpl-4oY9ywuaj8GLKLOHvfQ3IjePlhBG1 at 0x4052bdc4a0> JSON: {\n",
-       "  \"choices\": [\n",
-       "    {\n",
-       "      \"finish_reason\": \"length\",\n",
-       "      \"index\": 0,\n",
-       "      \"logprobs\": null,\n",
-       "      \"text\": \"\\n\\nThis is a test\"\n",
-       "    }\n",
-       "  ],\n",
-       "  \"created\": 1647953058,\n",
-       "  \"id\": \"cmpl-4oY9ywuaj8GLKLOHvfQ3IjePlhBG1\",\n",
-       "  \"model\": \"text-davinci:002\",\n",
-       "  \"object\": \"text_completion\"\n",
-       "}"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "This is a test\n"
+     ]
     }
    ],
    "source": [
     "response = openai.Completion.create(engine=\"text-davinci-002\", prompt=\"Say this is a test\", temperature=0, max_tokens=6)\n",
-    "response"
+    "print(response[\"choices\"][0][\"text\"])"
    ]
   },
   {
@@ -102,7 +89,9 @@
    "id": "c0b5c6f1-e4db-4218-bb32-4432095138e0",
    "metadata": {},
    "source": [
-    "Looking good. "
+    "Looking good. \n",
+    "\n",
+    "There's only one `choice`, and we can see the `text` for that choice, it says `\\n\\nThis is a text\"`."
    ]
   },
   {
@@ -123,36 +112,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "aa52aa40-ef96-4576-b9bb-65a14884d089",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<OpenAIObject text_completion id=cmpl-4oY9za6L2yHK4ImkRvjk4WDrfFryE at 0x406f7aff40> JSON: {\n",
-       "  \"choices\": [\n",
-       "    {\n",
-       "      \"finish_reason\": \"stop\",\n",
-       "      \"index\": 0,\n",
-       "      \"logprobs\": null,\n",
-       "      \"text\": \"\\n\\nThe list of numbers is increasing.\"\n",
-       "    }\n",
-       "  ],\n",
-       "  \"created\": 1647953059,\n",
-       "  \"id\": \"cmpl-4oY9za6L2yHK4ImkRvjk4WDrfFryE\",\n",
-       "  \"model\": \"text-davinci:002\",\n",
-       "  \"object\": \"text_completion\"\n",
-       "}"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"choices\": [\n",
+      "    {\n",
+      "      \"finish_reason\": \"stop\",\n",
+      "      \"index\": 0,\n",
+      "      \"logprobs\": null,\n",
+      "      \"text\": \"\\n\\nThe list of numbers is increasing.\"\n",
+      "    }\n",
+      "  ],\n",
+      "  \"created\": 1648104499,\n",
+      "  \"id\": \"cmpl-4pBYZfpZN3OfkhFeKRpBuQTPYJo6F\",\n",
+      "  \"model\": \"text-davinci:002\",\n",
+      "  \"object\": \"text_completion\"\n",
+      "}\n"
+     ]
     }
    ],
    "source": [
-    "openai.Completion.create(engine=\"text-davinci-002\", prompt=\"Summarize the trend of the list of numbers 132, 329, 583, 743, 966, 1123, 1298 in one sentence\", temperature=0, max_tokens=36)"
+    "response = openai.Completion.create(engine=\"text-davinci-002\", \n",
+    "                                    prompt=\"Summarize the trend of the list of numbers 132, 329, 583, 743, 966, 1123, 1298 in one sentence\", \n",
+    "                                    temperature=0, \n",
+    "                                    max_tokens=36)\n",
+    "print(response[\"choices\"][0][\"text\"])"
    ]
   },
   {
@@ -179,36 +169,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "b5ab99d1-fde9-4152-a41f-c9aeaf8b34cf",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<OpenAIObject text_completion id=cmpl-4oYA0jJtmVz4fSCBwK0nzoAuiZoOe at 0x406f7a31d0> JSON: {\n",
-       "  \"choices\": [\n",
-       "    {\n",
-       "      \"finish_reason\": \"stop\",\n",
-       "      \"index\": 0,\n",
-       "      \"logprobs\": null,\n",
-       "      \"text\": \"\\nThe numbers decrease steadily from just under 100 to just under 83.\"\n",
-       "    }\n",
-       "  ],\n",
-       "  \"created\": 1647953060,\n",
-       "  \"id\": \"cmpl-4oYA0jJtmVz4fSCBwK0nzoAuiZoOe\",\n",
-       "  \"model\": \"text-davinci:002\",\n",
-       "  \"object\": \"text_completion\"\n",
-       "}"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "The numbers decrease steadily from just under 100 to just under 83.\n"
+     ]
     }
    ],
    "source": [
-    "openai.Completion.create(engine=\"text-davinci-002\", prompt=\"\"\"Summarize the trend of the list of numbers in one sentence\n",
+    "response = openai.Completion.create(engine=\"text-davinci-002\", \n",
+    "                                    prompt=\"\"\"Summarize the trend of the list of numbers in one sentence\n",
     "\n",
     "Numbers: 132, 329, 583, 743, 966, 1123, 1298\n",
     "Trend: The numbers increase steadily from just over 100 to almost 1300.\n",
@@ -218,7 +194,10 @@
     "\n",
     "Numbers: 99, 97, 96, 90, 87, 83, 82\n",
     "Trend: \n",
-    "\"\"\", temperature=0, max_tokens=36)"
+    "\"\"\", \n",
+    "                                    temperature=0, \n",
+    "                                    max_tokens=36)\n",
+    "print(response[\"choices\"][0][\"text\"])"
    ]
   },
   {
@@ -233,36 +212,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "cebab106-2106-4f4e-af1c-0a07f115e62c",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<OpenAIObject text_completion id=cmpl-4oYA16spkvYFshACEw888FhGdENWD at 0x4052ff8ef0> JSON: {\n",
-       "  \"choices\": [\n",
-       "    {\n",
-       "      \"finish_reason\": \"stop\",\n",
-       "      \"index\": 0,\n",
-       "      \"logprobs\": null,\n",
-       "      \"text\": \"\\nThe numbers fluctuate between 54 and 57, with one outlier at 5643.\"\n",
-       "    }\n",
-       "  ],\n",
-       "  \"created\": 1647953061,\n",
-       "  \"id\": \"cmpl-4oYA16spkvYFshACEw888FhGdENWD\",\n",
-       "  \"model\": \"text-davinci:002\",\n",
-       "  \"object\": \"text_completion\"\n",
-       "}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "The numbers fluctuate between 54 and 57, with one outlier at 5643.\n"
+     ]
     }
    ],
    "source": [
-    "openai.Completion.create(engine=\"text-davinci-002\", prompt=\"\"\"Summarize the trend of the list of numbers in one sentence\n",
+    "response = openai.Completion.create(engine=\"text-davinci-002\", \n",
+    "                                    prompt=\"\"\"Summarize the trend of the list of numbers in one sentence\n",
     "\n",
     "Numbers: 132, 329, 583, 743, 966, 1123, 1298\n",
     "Trend: The numbers increase steadily from just over 100 to almost 1300.\n",
@@ -272,7 +237,10 @@
     "\n",
     "Numbers: 55, 54, 57, 5643, 56, 55, 54\n",
     "Trend: \n",
-    "\"\"\", temperature=0, max_tokens=36)"
+    "\"\"\", \n",
+    "                                    temperature=0, \n",
+    "                                    max_tokens=36)\n",
+    "print(response[\"choices\"][0][\"text\"])"
    ]
   },
   {
@@ -293,36 +261,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "05a09ea7-e384-4760-957a-96969ffd4b0a",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<OpenAIObject text_completion id=cmpl-4oYEbYqCbBaJwUHCOxqGuAQpPpHpz at 0x4004ebef40> JSON: {\n",
-       "  \"choices\": [\n",
-       "    {\n",
-       "      \"finish_reason\": \"stop\",\n",
-       "      \"index\": 0,\n",
-       "      \"logprobs\": null,\n",
-       "      \"text\": \"\\nThe numbers fluctuate between 54 and 57.\"\n",
-       "    }\n",
-       "  ],\n",
-       "  \"created\": 1647953345,\n",
-       "  \"id\": \"cmpl-4oYEbYqCbBaJwUHCOxqGuAQpPpHpz\",\n",
-       "  \"model\": \"text-davinci:002\",\n",
-       "  \"object\": \"text_completion\"\n",
-       "}"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "The numbers fluctuate between 54 and 57.\n"
+     ]
     }
    ],
    "source": [
-    "openai.Completion.create(engine=\"text-davinci-002\", prompt=\"\"\"Summarize the trend of the list of numbers in one sentence\n",
+    "response = openai.Completion.create(engine=\"text-davinci-002\", \n",
+    "                                    prompt=\"\"\"Summarize the trend of the list of numbers in one sentence\n",
     "\n",
     "Numbers: 132, 329, 583, 743, 966, 1123, 1298\n",
     "Trend: The numbers increase steadily from just over 100 on Monday to almost 1300 on Sunday.\n",
@@ -332,7 +286,10 @@
     "\n",
     "Numbers: 55, 54, 57, 5643, 56, 55, 54\n",
     "Trend: \n",
-    "\"\"\", temperature=0, max_tokens=36)"
+    "\"\"\", \n",
+    "                                    temperature=0, \n",
+    "                                    max_tokens=36)\n",
+    "print(response[\"choices\"][0][\"text\"])"
    ]
   },
   {
@@ -347,36 +304,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "51085c96-78b2-4209-88a3-c7380874da7f",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<OpenAIObject text_completion id=cmpl-4oYGDwrEqu305LzXiHR0kJxwoPFKB at 0x4052bf2860> JSON: {\n",
-       "  \"choices\": [\n",
-       "    {\n",
-       "      \"finish_reason\": \"stop\",\n",
-       "      \"index\": 0,\n",
-       "      \"logprobs\": null,\n",
-       "      \"text\": \"\\nThe numbers fluctuate between 54 and 57 all week, with one outlier at 5643 on Wednesday.\"\n",
-       "    }\n",
-       "  ],\n",
-       "  \"created\": 1647953445,\n",
-       "  \"id\": \"cmpl-4oYGDwrEqu305LzXiHR0kJxwoPFKB\",\n",
-       "  \"model\": \"text-davinci:002\",\n",
-       "  \"object\": \"text_completion\"\n",
-       "}"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "The numbers fluctuate between 54 and 57 all week, with one outlier at 5643 on Wednesday.\n"
+     ]
     }
    ],
    "source": [
-    "openai.Completion.create(engine=\"text-davinci-002\", prompt=\"\"\"Summarize the trend of the list of numbers in one sentence\n",
+    "response = openai.Completion.create(engine=\"text-davinci-002\", \n",
+    "                                    prompt=\"\"\"Summarize the trend of the list of numbers in one sentence\n",
     "\n",
     "Numbers: 132, 329, 583, 743, 966, 1123, 1298\n",
     "Trend: The numbers increase steadily from just over 100 on Monday to almost 1300 on Sunday.\n",
@@ -389,7 +332,10 @@
     "\n",
     "Numbers: 55, 54, 57, 5643, 56, 55, 54\n",
     "Trend: \n",
-    "\"\"\", temperature=0, max_tokens=36)"
+    "\"\"\", \n",
+    "                                    temperature=0, \n",
+    "                                    max_tokens=36)\n",
+    "print(response[\"choices\"][0][\"text\"])"
    ]
   },
   {
@@ -409,31 +355,17 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<OpenAIObject text_completion id=cmpl-4oYIoE96fMgJC6YyW8nwZUcnbtHFZ at 0x406f7c0bd0> JSON: {\n",
-       "  \"choices\": [\n",
-       "    {\n",
-       "      \"finish_reason\": \"stop\",\n",
-       "      \"index\": 0,\n",
-       "      \"logprobs\": null,\n",
-       "      \"text\": \"\\nThe numbers fluctuate between 54 and 57 all week, with one outlier at 5643 on Thursday.\"\n",
-       "    }\n",
-       "  ],\n",
-       "  \"created\": 1647953606,\n",
-       "  \"id\": \"cmpl-4oYIoE96fMgJC6YyW8nwZUcnbtHFZ\",\n",
-       "  \"model\": \"text-davinci:002\",\n",
-       "  \"object\": \"text_completion\"\n",
-       "}"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "The numbers fluctuate between 54 and 57 all week, with one outlier at 5643 on Thursday.\n"
+     ]
     }
    ],
    "source": [
-    "openai.Completion.create(engine=\"text-davinci-002\", prompt=\"\"\"Summarize the trend of the daily list of numbers in one sentence\n",
+    "response = openai.Completion.create(engine=\"text-davinci-002\", \n",
+    "                         prompt=\"\"\"Summarize the trend of the daily list of numbers in one sentence\n",
     "\n",
     "Numbers: M: 132, T: 329, W: 583, T: 743, F: 966, S: 1123, S: 1298\n",
     "Trend: The numbers increase steadily from just over 100 on Monday to almost 1300 on Sunday.\n",
@@ -446,7 +378,10 @@
     "\n",
     "Numbers: M: 55, T: 54, W: 57, T: 5643, F: 56, S: 55, S: 54\n",
     "Trend: \n",
-    "\"\"\", temperature=0, max_tokens=36)"
+    "\"\"\", \n",
+    "                         temperature=0, \n",
+    "                         max_tokens=36)\n",
+    "print(response[\"choices\"][0][\"text\"])"
    ]
   },
   {
@@ -459,36 +394,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "3ee58149-9218-4f80-b7c2-fa362a1ada5b",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<OpenAIObject text_completion id=cmpl-4oYKGNqSYLT1wf0KRrokL2ooNm1F3 at 0x406f90ac70> JSON: {\n",
-       "  \"choices\": [\n",
-       "    {\n",
-       "      \"finish_reason\": \"stop\",\n",
-       "      \"index\": 0,\n",
-       "      \"logprobs\": null,\n",
-       "      \"text\": \"\\nThe numbers increase steadily from just over 37,000 on Monday to almost 45,000 on Friday, with a sharp decrease on Saturday and Sunday.\"\n",
-       "    }\n",
-       "  ],\n",
-       "  \"created\": 1647953696,\n",
-       "  \"id\": \"cmpl-4oYKGNqSYLT1wf0KRrokL2ooNm1F3\",\n",
-       "  \"model\": \"text-davinci:002\",\n",
-       "  \"object\": \"text_completion\"\n",
-       "}"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "The numbers increase steadily from just over 37,000 on Monday to almost 45,000 on Friday, with a sharp decrease on Saturday and Sunday.\n"
+     ]
     }
    ],
    "source": [
-    "openai.Completion.create(engine=\"text-davinci-002\", prompt=\"\"\"Summarize the trend of the daily list of numbers in one sentence\n",
+    "response = openai.Completion.create(engine=\"text-davinci-002\", \n",
+    "                         prompt=\"\"\"Summarize the trend of the daily list of numbers in one sentence\n",
     "\n",
     "Numbers: M: 132, T: 329, W: 583, T: 743, F: 966, S: 1123, S: 1298\n",
     "Trend: The numbers increase steadily from just over 100 on Monday to almost 1300 on Sunday.\n",
@@ -501,7 +422,10 @@
     "\n",
     "Numbers: M: 37465, T: 52374, W: 39809, T: 30885, F: 44325, S: 230, S: 223\n",
     "Trend: \n",
-    "\"\"\", temperature=0, max_tokens=36)"
+    "\"\"\", \n",
+    "                         temperature=0, \n",
+    "                         max_tokens=36)\n",
+    "print(response[\"choices\"][0][\"text\"])"
    ]
   },
   {
@@ -525,14 +449,6 @@
     "2. Collect lots of examples - maybe these could be semi-automated with Mechanical Turk or a similar service?\n",
     "3. Explore what happens with different time intervals - can we pass dates instead of days?\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d1e179eb-74f4-44e7-b364-0157d064f481",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
