Add Markdown version of GPT-3 workbook
This is just being added as GitHub doesn't always render the
output correctly.

--- a/2022-03-gpt-trends/Notebook.ipynb
+++ b/2022-03-gpt-trends/Notebook.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "944fe328-5ba1-49b8-b36e-de8eb23124fc",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "9b36a492-175d-4688-9b72-9d5eae03587b",
    "metadata": {},
    "outputs": [
@@ -73,15 +73,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "\n",
-      "This is a test\n"
+      "{\n",
+      "  \"choices\": [\n",
+      "    {\n",
+      "      \"finish_reason\": \"length\",\n",
+      "      \"index\": 0,\n",
+      "      \"logprobs\": null,\n",
+      "      \"text\": \"\\n\\nThis is a test\"\n",
+      "    }\n",
+      "  ],\n",
+      "  \"created\": 1648109397,\n",
+      "  \"id\": \"cmpl-4pCpZBRGMXui3G1jJKJRo62DsOK2y\",\n",
+      "  \"model\": \"text-davinci:002\",\n",
+      "  \"object\": \"text_completion\"\n",
+      "}\n"
      ]
     }
    ],
    "source": [
     "response = openai.Completion.create(engine=\"text-davinci-002\", prompt=\"Say this is a test\", temperature=0, max_tokens=6)\n",
-    "print(response[\"choices\"][0][\"text\"])"
+    "print(response)"
    ]
   },
   {
@@ -91,7 +102,9 @@
    "source": [
     "Looking good. \n",
     "\n",
-    "There's only one `choice`, and we can see the `text` for that choice, it says `\\n\\nThis is a text\"`."
+    "There's only one `choice`, and we can see the `text` for that choice, it says `\\n\\nThis is a text\"`.\n",
+    "\n",
+    "In future blocks, let's just print the part we are interested in."
    ]
   },
   {
@@ -112,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "aa52aa40-ef96-4576-b9bb-65a14884d089",
    "metadata": {},
    "outputs": [
@@ -120,20 +133,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\n",
-      "  \"choices\": [\n",
-      "    {\n",
-      "      \"finish_reason\": \"stop\",\n",
-      "      \"index\": 0,\n",
-      "      \"logprobs\": null,\n",
-      "      \"text\": \"\\n\\nThe list of numbers is increasing.\"\n",
-      "    }\n",
-      "  ],\n",
-      "  \"created\": 1648104499,\n",
-      "  \"id\": \"cmpl-4pBYZfpZN3OfkhFeKRpBuQTPYJo6F\",\n",
-      "  \"model\": \"text-davinci:002\",\n",
-      "  \"object\": \"text_completion\"\n",
-      "}\n"
+      "\n",
+      "\n",
+      "The list of numbers is increasing.\n"
      ]
     }
    ],
@@ -169,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "b5ab99d1-fde9-4152-a41f-c9aeaf8b34cf",
    "metadata": {},
    "outputs": [
@@ -212,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "cebab106-2106-4f4e-af1c-0a07f115e62c",
    "metadata": {},
    "outputs": [
@@ -261,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "05a09ea7-e384-4760-957a-96969ffd4b0a",
    "metadata": {},
    "outputs": [
@@ -304,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "51085c96-78b2-4209-88a3-c7380874da7f",
    "metadata": {},
    "outputs": [
@@ -350,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "e36f907f-60fa-4273-9762-b7ff8a045c54",
    "metadata": {},
    "outputs": [
@@ -394,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "3ee58149-9218-4f80-b7c2-fa362a1ada5b",
    "metadata": {},
    "outputs": [
